add scrolling gridview
replaced textview, started button logics

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,17 +10,22 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="janzantinga.com.chooseyourownadventuretest.MainActivity">
 
-    <TextView
-        android:id="@+id/storySoFar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:maxLines = "20" />
+    <GridView
+        android:id="@+id/gridView1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottom_panel"
+        android:verticalSpacing="15dp"
+        android:horizontalSpacing="0dp">
+
+    </GridView>
 
     <LinearLayout
         android:id="@+id/bottom_panel"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#e5e5e5"
         android:layout_alignParentBottom="true">
     <Button
         android:layout_width="wrap_content"
